[package]
name = "mdlink"
description = "Auto-convert HTTP links for your favorite services into nice Markdown links"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
version = "0.2.14"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ErichDonGubler/mdlink"

[package.metadata.wix]
upgrade-guid = "4BAD2368-4ED6-483A-AE26-1120345654C0"
path-guid = "51E0F7DA-62A6-43CA-9F0E-A3C6F212B00F"
license = false
eula = false

[dependencies]
arboard = { version = "3.2.1", default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0.1"
env_logger = "0.10.0"
lazy_format = "2.0.3"
itertools = "0.11.0"
joinery = "3.1.0"
knuffel = "3.2.0"
log = "0.4.20"
miette = "7.2.0"
regex = "1.10.2"
serde = { version = "1.0.197", features = ["derive"] }
snafu = "0.8.0"
toml = "0.8.10"
url = "2.5.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
