[package]
name = "mdlink"
description = "Auto-convert HTTP links for your favorite services into nice Markdown links"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ErichDonGubler/mdlink"

[package.metadata.wix]
upgrade-guid = "4BAD2368-4ED6-483A-AE26-1120345654C0"
path-guid = "51E0F7DA-62A6-43CA-9F0E-A3C6F212B00F"
license = false
eula = false

[dependencies]
arboard = { version = "3.2.1", default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
format = "0.2.4"
itertools = "0.11.0"
joinery = "3.1.0"
log = "0.4.20"
regex = "1.10.2"
url = "2.4.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
